@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-16T01:01:19Z",
-  "count_outdated" : 266,
-  "uniques_outdated" : 132,
+  "timestamp" : "2022-05-16T08:16:01Z",
+  "count_outdated" : 267,
+  "uniques_outdated" : 133,
   "count" : 304,
   "uniques" : 157,
   "clones" : [
-    {
-      "timestamp": "2022-05-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-04T00:00:00Z",
       "count": 2,
